<?xml version="1.0"?>
<package format="2">
  <name>path_finder</name>
  <version>0.0.0</version>
  <description>The path_finder package</description>

  <maintainer email="yehongkai@todo.todo">yehongkai</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>occ_grid</build_depend>
  <build_depend>self_msgs_and_srvs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>occ_grid</exec_depend>
  <exec_depend>self_msgs_and_srvs</exec_depend>


  <export>

  </export>
</package>
